[package]
name = "validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
blake2 = "0.10.4"
clap = { version = "4.0.32", features = ["derive"] }
chrono = "0.4.23"
hex = "0.4.3"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
spyglass-lens = "0.1.6"
toml = "0.7.2"
tokio = { version = "1.25.0", features = ["full"] }